Add desc and more assignment placeholders

--- a/src/app/components/components.component.html
+++ b/src/app/components/components.component.html
@@ -1,20 +1,11 @@
-<div class="container">
-    <div class="row">
-        <div class="col">
-            <h2>Assignment Instructions:</h2>
-            <ol>
-                <li>Create two new Components (manually or with CLI): WarningAlert and SuccessAlert</li>
-                <li>Output them beneath each other in the AppComponent</li>
-                <li>Output a warning or success message in the Components</li>
-                <li>Style the Components appropriately (maybe some red/ green text?)</li>
-            </ol>
-            <p>Use external or internal templates and styles!</p>
-            <p>Feel free to create more components, nest them into each other or play around with different types of
-                selectors!</p>
-            <hr>
-            <h2>Result:</h2>
-            <app-warning-alert></app-warning-alert>
-            <app-success-alert></app-success-alert>
-        </div>
-    </div>
-</div>
+<h2>Assignment Instructions:</h2>
+<ol>
+    <li>Create two new Components (manually or with CLI): WarningAlert and SuccessAlert</li>
+    <li>Output them beneath each other in the AppComponent</li>
+    <li>Output the warning and success messages in the Components</li>
+    <li>Style the Components appropriately</li>
+</ol>
+<hr>
+<h2>Result:</h2>
+<app-warning-alert></app-warning-alert>
+<app-success-alert></app-success-alert>
