--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,8 +8,9 @@
   <div class="row m-4">
     <div class="col-12">
       <p>
-        Angular: The Complete Guide is taught on UDemy by Maximilian Schwarzmuller. 
-        The version of the course I took covered Angular 9. Click the link in the page header to view more information on the course.
+        Angular: The Complete Guide is taught on UDemy by Maximilian Schwarzmuller.
+        The version of the course I took covered Angular 9. Click the link in the page header to view more information
+        on the course.
         Click through the options in the left navigation bar to view the assignments I completed as part of this course.
       </p>
     </div>
@@ -25,33 +26,35 @@
           aria-controls="v-pills-directives" aria-selected="false">Directives</a>
         <a class="nav-link" id="v-pills-event-binding-tab" data-toggle="pill" href="#v-pills-event-binding" role="tab"
           aria-controls="v-pills-event-binding" aria-selected="false">Event Binding</a>
-          <a class="nav-link" id="v-pills-directives-deep-dive-tab" data-toggle="pill" href="#v-pills-directives-deep-dive" role="tab"
-          aria-controls="v-pills-directives-deep-dive" aria-selected="false">Directives Deep Dive</a>
-          <a class="nav-link" id="v-pills-services-tab" data-toggle="pill" href="#v-pills-services" role="tab"
+        <a class="nav-link" id="v-pills-directives-deep-dive-tab" data-toggle="pill"
+          href="#v-pills-directives-deep-dive" role="tab" aria-controls="v-pills-directives-deep-dive"
+          aria-selected="false">Directives Deep Dive</a>
+        <a class="nav-link" id="v-pills-services-tab" data-toggle="pill" href="#v-pills-services" role="tab"
           aria-controls="v-pills-services" aria-selected="false">Services</a>
-          <a class="nav-link" id="v-pills-routing-tab" data-toggle="pill" href="#v-pills-routing" role="tab"
+        <a class="nav-link" id="v-pills-routing-tab" data-toggle="pill" href="#v-pills-routing" role="tab"
           aria-controls="v-pills-routing" aria-selected="false">Routing</a>
-          <a class="nav-link" id="v-pills-observables-tab" data-toggle="pill" href="#v-pills-observables" role="tab"
+        <a class="nav-link" id="v-pills-observables-tab" data-toggle="pill" href="#v-pills-observables" role="tab"
           aria-controls="v-pills-observables" aria-selected="false">Observables</a>
-          <a class="nav-link" id="v-pills-forms-tab" data-toggle="pill" href="#v-pills-forms" role="tab"
+        <a class="nav-link" id="v-pills-forms-tab" data-toggle="pill" href="#v-pills-forms" role="tab"
           aria-controls="v-pills-forms" aria-selected="false">Forms</a>
-          <a class="nav-link" id="v-pills-pipes-tab" data-toggle="pill" href="#v-pills-pipes" role="tab"
+        <a class="nav-link" id="v-pills-pipes-tab" data-toggle="pill" href="#v-pills-pipes" role="tab"
           aria-controls="v-pills-pipes" aria-selected="false">Pipes</a>
-          <a class="nav-link" id="v-pills-http-tab" data-toggle="pill" href="#v-pills-http" role="tab"
+        <a class="nav-link" id="v-pills-http-tab" data-toggle="pill" href="#v-pills-http" role="tab"
           aria-controls="v-pills-http" aria-selected="false">HTTP</a>
-          <a class="nav-link" id="v-pills-animation-tab" data-toggle="pill" href="#v-pills-animation" role="tab"
+        <a class="nav-link" id="v-pills-animation-tab" data-toggle="pill" href="#v-pills-animation" role="tab"
           aria-controls="v-pills-animation" aria-selected="false">Animation</a>
-          <a class="nav-link" id="v-pills-dynamic-loader-tab" data-toggle="pill" href="#v-pills-dynamic-loader" role="tab"
+        <a class="nav-link" id="v-pills-dynamic-loader-tab" data-toggle="pill" href="#v-pills-dynamic-loader" role="tab"
           aria-controls="v-pills-dynamic-loader" aria-selected="false">Dynamic Loader</a>
-          <a class="nav-link" id="v-pills-auth-tab" data-toggle="pill" href="#v-pills-auth" role="tab"
+        <a class="nav-link" id="v-pills-auth-tab" data-toggle="pill" href="#v-pills-auth" role="tab"
           aria-controls="v-pills-auth" aria-selected="false">Authentication</a>
-          <a class="nav-link" id="v-pills-ngrx-tab" data-toggle="pill" href="#v-pills-ngrx" role="tab"
+        <a class="nav-link" id="v-pills-ngrx-tab" data-toggle="pill" href="#v-pills-ngrx" role="tab"
           aria-controls="v-pills-ngrx" aria-selected="false">NgRx</a>
       </div>
     </div>
     <div class="col-9">
       <div class="tab-content" id="v-pills-tabContent">
-        <div class="tab-pane fade show active" id="v-pills-components" role="tabpanel" aria-labelledby="v-pills-components-tab">
+        <div class="tab-pane fade show active" id="v-pills-components" role="tabpanel"
+          aria-labelledby="v-pills-components-tab">
           <app-components></app-components>
         </div>
         <div class="tab-pane fade" id="v-pills-data-binding" role="tabpanel" aria-labelledby="v-pills-data-binding-tab">
@@ -61,10 +64,12 @@
         <div class="tab-pane fade" id="v-pills-directives" role="tabpanel" aria-labelledby="v-pills-directives-tab">
           <p>Directives placeholder</p>
         </div>
-        <div class="tab-pane fade" id="v-pills-event-binding" role="tabpanel" aria-labelledby="v-pills-event-binding-tab">
+        <div class="tab-pane fade" id="v-pills-event-binding" role="tabpanel"
+          aria-labelledby="v-pills-event-binding-tab">
           <p>Event Binding placeholder</p>
         </div>
-        <div class="tab-pane fade" id="v-pills-directives-deep-dive" role="tabpanel" aria-labelledby="v-pills-directives-deep-dive-tab">
+        <div class="tab-pane fade" id="v-pills-directives-deep-dive" role="tabpanel"
+          aria-labelledby="v-pills-directives-deep-dive-tab">
           <p>Directives Deep Dive placeholder</p>
         </div>
         <div class="tab-pane fade" id="v-pills-services" role="tabpanel" aria-labelledby="v-pills-services-tab">
@@ -88,7 +93,8 @@
         <div class="tab-pane fade" id="v-pills-animation" role="tabpanel" aria-labelledby="v-pills-animation-tab">
           <p>Animation placeholder</p>
         </div>
-        <div class="tab-pane fade" id="v-pills-dynamic-loader" role="tabpanel" aria-labelledby="v-pills-dynamic-loader-tab">
+        <div class="tab-pane fade" id="v-pills-dynamic-loader" role="tabpanel"
+          aria-labelledby="v-pills-dynamic-loader-tab">
           <p>Dynamic Loader placeholder</p>
         </div>
         <div class="tab-pane fade" id="v-pills-auth" role="tabpanel" aria-labelledby="v-pills-auth-tab">
