--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,14 @@
 <nav class="navbar navbar-dark bg-dark mb-3">
   <a class="navbar-brand mb-0" href="https://www.udemy.com/course/the-complete-guide-to-angular-2" target="_blank"
     title="Open Course on UDemy">
-    UDemy Angular: The Complete Guide<i class="fa fa-external-link ml-2" aria-hidden="true"></i>
+    Udemy Angular: The Complete Guide<i class="fa fa-external-link ml-2" aria-hidden="true"></i>
   </a>
 </nav>
 <div class="container-fluid">
   <div class="row m-4">
     <div class="col-12">
       <p>
-        Angular: The Complete Guide is taught on UDemy by Maximilian Schwarzmuller.
+        Angular: The Complete Guide is taught on Udemy by Maximilian Schwarzmuller.
         The version of the course I took covered Angular 9. Click the link in the page header to view more information
         on the course.
         Click through the options in the left navigation bar to view the assignments I completed as part of this course.
@@ -58,8 +58,7 @@
           <app-components></app-components>
         </div>
         <div class="tab-pane fade" id="v-pills-data-binding" role="tabpanel" aria-labelledby="v-pills-data-binding-tab">
-          <p>Data Binding placeholder
-          </p>
+          <app-data-binding></app-data-binding>
         </div>
         <div class="tab-pane fade" id="v-pills-directives" role="tabpanel" aria-labelledby="v-pills-directives-tab">
           <p>Directives placeholder</p>
