Completed directives assignment

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,6 +13,7 @@
         on the course.
         Click through the options in the left navigation bar to view the assignments I completed as part of this course.
       </p>
+      <!-- <app-practice></app-practice> -->
     </div>
   </div>
   <div class="row">
@@ -61,7 +62,7 @@
           <app-data-binding></app-data-binding>
         </div>
         <div class="tab-pane fade" id="v-pills-directives" role="tabpanel" aria-labelledby="v-pills-directives-tab">
-          <p>Directives placeholder</p>
+          <app-directives></app-directives>
         </div>
         <div class="tab-pane fade" id="v-pills-event-binding" role="tabpanel"
           aria-labelledby="v-pills-event-binding-tab">
