--- a/src/app/directives/directives.component.html
+++ b/src/app/directives/directives.component.html
@@ -4,7 +4,7 @@
     <li>Add a paragraph with any content of your choice</li>
     <li>Toggle the displaying of that paragraph with the button created in the first step</li>
     <li>Log all button clicks in an array and output that array below the secret paragraph (maybe log a timestamp or
-        incremenet a number)</li>
+        increment a number)</li>
     <li>Starting at the 5th log item, give all future items a blue background (via ngStyle) and white color text
         (ngClass)</li>
 </ol>
