--- a/src/app/practice/practice.component.html
+++ b/src/app/practice/practice.component.html
@@ -1,18 +1,8 @@
-<label>Server Name</label>
-<!--<input-->
-<!--type="text"-->
-<!--class="form-control"-->
-<!--(input)="onUpdateServerName($event)">-->
-<input type="text" class="form-control" [(ngModel)]="serverName">
-<!--<p>{{ serverName }}</p>-->
-<button class="btn btn-primary my-3" [disabled]="!allowNewServer" (click)="onCreateServer()">Add Server</button>
-<!--<p [innerText]="allowNewServer"></p>-->
-<!-- <p>{{ serverCreationStatus }}</p> -->
-<!-- <p *ngIf="serverCreated; else noServer">Server was created. Server name is {{ serverName }}</p>
-<ng-template #noServer>
-    <p>No server was created.</p>
-</ng-template> -->
-<p *ngIf="serverCreated">Server was created. Server name is {{ serverName }}</p>
-<p [ngStyle]="{'background-color':getColor()}">Server with ID {{ serverId }} status is {{ serverStatus}} </p>
-<p [ngClass]="{online:serverStatus === 'online'}">Server with ID {{ serverId }} status is {{ serverStatus}} </p>
-<p *ngFor="let server of servers">{{ server }} is {{ serverStatus }}</p>
+<app-cockpit (serverCreated)="onServerAdded($event)"
+(blueprintCreated)="onBlueprintAdded($event)"></app-cockpit>
+<hr>
+<div class="row">
+    <div class="col-md-12">
+        <app-server-element *ngFor="let serverElement of serverElements" [srvElement]="serverElement"></app-server-element>
+    </div>
+</div>
