--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -66,7 +66,7 @@
         </div>
         <div class="tab-pane fade" id="v-pills-event-binding" role="tabpanel"
           aria-labelledby="v-pills-event-binding-tab">
-          <p>Event Binding placeholder</p>
+          <app-event-binding></app-event-binding>
         </div>
         <div class="tab-pane fade" id="v-pills-directives-deep-dive" role="tabpanel"
           aria-labelledby="v-pills-directives-deep-dive-tab">
