Finished directive deep dive

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
     Udemy Angular: The Complete Guide<i class="fa fa-external-link ml-2" aria-hidden="true"></i>
   </a>
 </nav>
-<div class="container-fluid">
+<div class="container-fluid mb-5">
   <div class="row m-4">
     <div class="col-12">
       <p>
@@ -70,7 +70,7 @@
         </div>
         <div class="tab-pane fade" id="v-pills-directives-deep-dive" role="tabpanel"
           aria-labelledby="v-pills-directives-deep-dive-tab">
-          <p>Directives Deep Dive placeholder</p>
+          <app-directives-deep-dive></app-directives-deep-dive>
         </div>
         <div class="tab-pane fade" id="v-pills-services" role="tabpanel" aria-labelledby="v-pills-services-tab">
           <p>Services placeholder</p>
