--- a/src/app/practice/practice.component.html
+++ b/src/app/practice/practice.component.html
@@ -1,8 +1,7 @@
-<app-cockpit (serverCreated)="onServerAdded($event)"
-(blueprintCreated)="onBlueprintAdded($event)"></app-cockpit>
-<hr>
-<div class="row">
-    <div class="col-md-12">
-        <app-server-element *ngFor="let serverElement of serverElements" [srvElement]="serverElement"></app-server-element>
-    </div>
+<div class="container mt-5">
+	<div class="row">
+		<div class="col-xs-12">
+			<p>Practice Component</p>
+		</div>
+	</div>
 </div>
