Completed Services Assignment

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -73,7 +73,7 @@
           <app-directives-deep-dive></app-directives-deep-dive>
         </div>
         <div class="tab-pane fade" id="v-pills-services" role="tabpanel" aria-labelledby="v-pills-services-tab">
-          <p>Services placeholder</p>
+          <app-services></app-services>
         </div>
         <div class="tab-pane fade" id="v-pills-routing" role="tabpanel" aria-labelledby="v-pills-routing-tab">
           <p>Routing placeholder</p>
