--- a/src/app/practice/practice.component.html
+++ b/src/app/practice/practice.component.html
@@ -1,7 +1,12 @@
 <div class="container mt-5">
 	<div class="row">
 		<div class="col-xs-12">
-			<p>Practice Component</p>
+			<app-new-account></app-new-account>
+      <hr>
+      <app-account
+        *ngFor="let acc of accounts; let i = index"
+        [account]="acc"
+        [id]="i"></app-account>
 		</div>
 	</div>
 </div>
