--- a/src/app/practice/servers/servers.component.html
+++ b/src/app/practice/servers/servers.component.html
@@ -1,18 +1,20 @@
 <div class="row">
   <div class="col-xs-12 col-sm-4">
     <div class="list-group">
-      <a
-        href="#"
-        class="list-group-item"
-        *ngFor="let server of servers">
+      <a [routerLink]="['/servers', 5, 'edit']"
+      [queryParams]="{allowEdit: '1'}"
+      fragment="loading"
+      href="#" 
+      class="list-group-item" 
+      *ngFor="let server of servers">
         {{ server.name }}
       </a>
     </div>
   </div>
   <div class="col-xs-12 col-sm-4">
+    <button class="btn btn-primary my-2" (click)="onReload()">Reload Page</button>
     <app-edit-server></app-edit-server>
     <hr>
     <app-server></app-server>
   </div>
 </div>
-
