More routing practice

--- a/src/app/practice/users/user/user.component.html
+++ b/src/app/practice/users/user/user.component.html
@@ -1,4 +1,4 @@
 <p>User with ID {{ user.id }} loaded.</p>
 <p>User name is {{ user.name }}</p>
-<hr>
-<a [routerLink]="['/users', 10, 'Bekah']">Load Bekah</a>
+<!-- <hr> -->
+<!-- <a [routerLink]="['/users', 10, 'Bekah']">Load Bekah</a> -->
