--- a/src/app/practice/practice.component.html
+++ b/src/app/practice/practice.component.html
@@ -1,19 +1,29 @@
 <div class="container">
-  <div class="row my-4">
+  <div class="row">
     <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
-      <ul class="nav nav-tabs">
-        <li class="nav-item" role="presentation" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
-          <a class="nav-link" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</a></li>
-        <li class="nav-item" role="presentation" routerLinkActive="active">
-          <a class="nav-link" routerLink="/servers" routerLinkActive="active">Servers</a></li>
-        <li class="nav-item" role="presentation" routerLinkActive="active">
-          <a class="nav-link" routerLink="/users" routerLinkActive="active">Users</a></li>
-      </ul>
+      <form (ngSubmit)="onSubmit(form)" #form="ngForm">
+        <div id="user-data">
+          <div class="form-group">
+            <label for="username">Username</label>
+            <input type="text" id="username" class="form-control" ngModel name="username" required>
+          </div>
+          <button class="btn btn-secondary" type="button" (click)="suggestUserName()">Suggest an Username</button>
+          <div class="form-group">
+            <label for="email">Email</label>
+            <input type="email" id="email" class="form-control" ngModel name="email" required email #email="ngModel">
+            <span *ngIf="!email.valid && email.touched" class="text-muted">That doesn't look like an email address to me...</span>
+          </div>
+        </div>
+        <div class="form-group">
+          <label for="secret">Secret Questions</label>
+          <select id="secret" class="form-control" ngModel name="secret" required>
+            <option disabled hidden value="">--Please select a question--</option>
+            <option value="pet">Your first Pet?</option>
+            <option value="teacher">Your first teacher?</option>
+          </select>
+        </div>
+        <button class="btn btn-primary" type="submit" [disabled]="!form.valid">Submit</button>
+      </form>
     </div>
   </div>
-  <div class="row mb-4">
-    <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
-      <router-outlet></router-outlet>
-    </div>
-  </div>  
 </div>
