--- a/src/app/practice/practice.component.html
+++ b/src/app/practice/practice.component.html
@@ -1,50 +1,45 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
-      <form (ngSubmit)="onSubmit(form)" #form="ngForm">
-        <div id="user-data" ngModelGroup="userData">
+      <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
+        <div formGroupName="userData">
           <div class="form-group">
             <label for="username">Username</label>
-            <input type="text" id="username" class="form-control" ngModel name="username" required>
+            <input
+              type="text"
+              id="username"
+              formControlName="username"
+              class="form-control">
+              <span class="text-muted" *ngIf="!signupForm.get('userData.username').valid && signupForm.get('userData.username').touched">Please enter a valid username!</span>
           </div>
-          <button class="btn btn-secondary" type="button" (click)="suggestUserName()">Suggest an Username</button>
           <div class="form-group">
-            <label for="email">Email</label>
-            <input type="email" id="email" class="form-control" ngModel name="email" required email #email="ngModel">
-            <span *ngIf="!email.valid && email.touched" class="text-muted">That doesn't look like an email address to me...</span>
+            <label for="email">email</label>
+            <input
+              type="text"
+              id="email"
+              formControlName="email"
+              class="form-control">
+              <span class="text-muted" *ngIf="!signupForm.get('userData.email').valid && signupForm.get('userData.email').touched">Please enter a valid email!</span>
           </div>
-        </div>
-        <div class="form-group">
-          <label for="secret">Secret Questions</label>
-          <select id="secret" class="form-control" ngModel name="secret" required>
-            <option disabled hidden value="">--Please select a question--</option>
-            <option value="pet">Your first Pet?</option>
-            <option value="teacher">Your first teacher?</option>
-          </select>
-        </div>
-        <div class="form-group">
-          <textarea class="form-control" name="questionAnswer" cols="61" rows="3" [(ngModel)]="answer" required></textarea>
-        </div>
-        <p>Your Answer: {{ answer }}</p>
+        </div>        
         <div class="radio" *ngFor="let gender of genders">
           <label>
-            <input type="radio" name="gender" ngModel [value]="gender" required>
-            {{ gender }}
+            <input
+              type="radio"
+              formControlName="gender"
+              [value]="gender">{{ gender }}
           </label>
         </div>
-        <button class="btn btn-primary" type="submit" [disabled]="!form.valid">Submit</button>
+        <div formArrayName="hobbies">
+          <h4>Hobbies</h4>
+          <button class="btn btn-secondary" type="button" (click)="onAddHobby()">Add Hobby</button>
+          <div class="form-group" *ngFor="let hobbyControl of getControls(); let i = index">
+            <input type="text" class="form-control" [formControlName]="i">
+          </div>
+        </div>
+        <div class="text-muted mt-2" *ngIf="!signupForm.valid && signupForm.touched">Please complete all fields!</div>
+        <button class="btn btn-primary mt-2" type="submit" [disabled]="!signupForm.valid">Submit</button>
       </form>
-    </div>
-  </div>  
-  <hr>
-  <div class="row">
-    <div class="col-xs-12" *ngIf="submitted">
-      <h3>Your Data</h3>
-      <p>Username: {{ user.username }}</p>
-      <p>Email: {{ user.email }}</p>
-      <p>Question: {{ user.secretQuestion }}</p>
-      <p>Answer: {{ user.answer }}</p>
-      <p>Gender: {{ user.gender }}</p>
     </div>
   </div>
 </div>
