--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,8 +37,10 @@
           aria-selected="false">Directives Deep Dive</a>
         <a class="nav-link" id="v-pills-services-tab" data-toggle="pill" href="#v-pills-services" role="tab"
           aria-controls="v-pills-services" aria-selected="false">Services</a>
-        <a class="nav-link" id="v-pills-forms-tab" data-toggle="pill" href="#v-pills-forms" role="tab"
-          aria-controls="v-pills-forms" aria-selected="false">Forms</a>
+        <a class="nav-link" id="v-pills-td-forms-tab" data-toggle="pill" href="#v-pills-td-forms" role="tab"
+          aria-controls="v-pills-td-forms" aria-selected="false">Template-Driven Forms</a>
+        <a class="nav-link" id="v-pills-r-forms-tab" data-toggle="pill" href="#v-pills-r-forms" role="tab"
+          aria-controls="v-pills-r-forms" aria-selected="false">Reactive Forms</a>
       </div>
     </div>
     <div class="col-9">
@@ -64,8 +66,11 @@
         <div class="tab-pane fade" id="v-pills-services" role="tabpanel" aria-labelledby="v-pills-services-tab">
           <app-services></app-services>
         </div>
-        <div class="tab-pane fade" id="v-pills-forms" role="tabpanel" aria-labelledby="v-pills-forms-tab">
+        <div class="tab-pane fade" id="v-pills-td-forms" role="tabpanel" aria-labelledby="v-pills-td-forms-tab">
           <app-td-forms></app-td-forms>
+        </div>
+        <div class="tab-pane fade" id="v-pills-r-forms" role="tabpanel" aria-labelledby="v-pills-r-forms-tab">
+          <app-r-forms></app-r-forms>
         </div>
       </div>
     </div>
