--- a/src/app/practice/practice.component.html
+++ b/src/app/practice/practice.component.html
@@ -5,29 +5,25 @@
         <div formGroupName="userData">
           <div class="form-group">
             <label for="username">Username</label>
-            <input
-              type="text"
-              id="username"
-              formControlName="username"
-              class="form-control">
-              <span class="text-muted" *ngIf="!signupForm.get('userData.username').valid && signupForm.get('userData.username').touched">Please enter a valid username!</span>
+            <input type="text" id="username" formControlName="username" class="form-control">
+            <span class="text-muted"
+              *ngIf="!signupForm.get('userData.username').valid && signupForm.get('userData.username').touched">
+              <span *ngIf="signupForm.get('userData.username').errors['nameIsForbidden']">
+                This username is forbidden!</span>
+              <span *ngIf="signupForm.get('userData.username').errors['required']">Username is required!</span>
+            </span>
           </div>
           <div class="form-group">
             <label for="email">email</label>
-            <input
-              type="text"
-              id="email"
-              formControlName="email"
-              class="form-control">
-              <span class="text-muted" *ngIf="!signupForm.get('userData.email').valid && signupForm.get('userData.email').touched">Please enter a valid email!</span>
+            <input type="text" id="email" formControlName="email" class="form-control">
+            <span class="text-muted"
+              *ngIf="!signupForm.get('userData.email').valid && signupForm.get('userData.email').touched">Please enter a
+              valid email!</span>
           </div>
-        </div>        
+        </div>
         <div class="radio" *ngFor="let gender of genders">
           <label>
-            <input
-              type="radio"
-              formControlName="gender"
-              [value]="gender">{{ gender }}
+            <input type="radio" formControlName="gender" [value]="gender">{{ gender }}
           </label>
         </div>
         <div formArrayName="hobbies">
